@@ -1,8 +1,3 @@
-2003-05-28  Casper S. Hornstrup  <chorns@users.sourceforge.net>
-
-	* tutorials/user/intro/installiso.xml: Installation program can create
-	and delete partitions and format them with a FAT32 filesystem.
-
 2002-11-05  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* ChangeLog: Added.
